--- a/case-study/ai-la-trieu-phu.html
+++ b/case-study/ai-la-trieu-phu.html
@@ -18,13 +18,15 @@
     <div class="content" style="position: relative;">
         <h1 class="text-center my-5">AI LA TRIEU PHU</h1>
         <h2 class="text-center my-5 mx-5" id="question">Nhấn Next để bắt đầu</h2>
-        <div class="d-grid gap-2 d-md-block text-center col">
-            <button id="A" onclick="checkResult(id,choi)" class="col-4 mx-3 btn btn-primary" type="button"></button>
-            <button id="B" onclick="checkResult(id,choi)" class="col-4 mx-3 btn btn-primary" type="button"></button>
-        </div>
-        <div class="d-grid gap-2 d-md-block text-center my-5 col">
-            <button id="C" onclick="checkResult(id,choi)" class="col-4 mx-3 btn btn-primary" type="button"></button>
-            <button id="D" onclick="checkResult(id,choi)" class="col-4 mx-3 btn btn-primary" type="button"></button>
+        <div id="btn" style="display: none;">
+            <div class="d-grid gap-2 d-md-block text-center col">
+                <button id="A" onclick="checkResult(id,choi)" class="col-4 mx-3 btn btn-primary" type="button"></button>
+                <button id="B" onclick="checkResult(id,choi)" class="col-4 mx-3 btn btn-primary" type="button"></button>
+            </div>
+            <div class="d-grid gap-2 d-md-block text-center my-5 col">
+                <button id="C" onclick="checkResult(id,choi)" class="col-4 mx-3 btn btn-primary" type="button"></button>
+                <button id="D" onclick="checkResult(id,choi)" class="col-4 mx-3 btn btn-primary" type="button"></button>
+            </div>
         </div>
 
         <div class="text-center my-5">
