--- a/case-study/ai-la-trieu-phu.html
+++ b/case-study/ai-la-trieu-phu.html
@@ -16,7 +16,7 @@
 
 <body style="background-color: lightsalmon;">
     <div class="content" style="position: relative;">
-        <h1 class="text-center my-5">AI LA TRIEU PHU</h1>
+        <h1 class="text-center my-5">KHÔNG PHẢI AI LÀ TRIỆU PHÚ ĐÂU</h1>
         <h2 class="text-center my-5 mx-5" id="question">Nhấn Next để bắt đầu</h2>
         <div id="btn" style="display: none;">
             <div class="d-grid gap-2 d-md-block text-center col">
